--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   http: ^1.4.0
   cached_network_image: ^3.2.3
   path_provider: ^2.0.15
-  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
