--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   http: ^1.4.0
   cached_network_image: ^3.2.3
-  path_provider: ^2.0.15
+  path_provider: ^2.1.1
+  dio: ^5.4.0
+
 
 dev_dependencies:
   flutter_test:
