--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   cached_network_image: ^3.2.3
   path_provider: ^2.1.1
   dio: ^5.4.0
-
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
